# lilypond-simulation

./: README.md
frontend/: index.html  package.json  vite.config.ts  wrangler.jsonc
frontend/src/: App.tsx
lilypond-simulation/: Cargo.toml
lilypond-simulation/src/: lib.rs
