[package]
name = "lilypond-simulation"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rand = "0.9.2"
wasm-bindgen = "0.2.104"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
tsify = "0.5.6"
